2001-03-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm24_convert.in (line):
	fixed HilightColor conversion
	added HilightColorset conversion
	convert WindowShadeAnimate command

2001-03-22  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm24_convert.in (line):
	enhanced button panel line recognition

2001-03-21  Dan Espen  <dane@mk.telcordia.com>

	* fvwm24_convert.in: Add detection of old style FvwmButtons panel
	definitions.

2000-03-20  Mikhael Goikhman  <migo@homemail.com>

	* fvwm-config.in:
	added --fvwm-exe option for potential forward compatibility

	* fvwm-menu-desktop.1:
	* fvwm-menu-desktop.in:
	* fvwm-menu-directory.1:
	* fvwm-menu-directory.in:
	* fvwm-menu-xlock.1:
	* fvwm-menu-xlock.in:
	be compatible with a new wm-icons-0.3.0 icon list

	* fvwm-menu-headlines.1:
	simply regenerated with a new fancy perl-5.6.0 man page format

2001-03-18  Dan Espen  <dane@mk.telcordia.com>

	* make_fvwmdist.sh: Add instruction to increase release number in FAQ.
	* fvwm24_convert.in: Changes in GlobalOpts conversions.

2001-03-18  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm24_convert.in (line):
	replace "IconFont" with "Style * IconFont"

2001-03-11  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm-menu-headlines.1:
	* fvwm-menu-directory.1:
	* fvwm-menu-xlock.in:
	* fvwm-menu-headlines.in:
	* fvwm-menu-directory.in:
	changed some comments so that they don't look like cvs conflict markers

2001-02-26  Dan Espen  <dane@mk.telcordia.com>

	* make_fvwmdist.sh (VER): Add instructions for NEWS update on stable
	branch.

2001-02-25  Dan Espen  <dane@mk.telcordia.com>

	* make_fvwmdist.sh (wrong_dir): Use portable way of redirecting
	the grep output.

2001-01-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* make_fvwmdist.sh (wrong_dir):
	fixed logic
	partially rewritten for portability reasons
	new options
	  -R: skip to next release series number after building
	  -M: skip to next major release number after building
	  -w: disable -Werror in compiler flags